refactoring and fixing compiler messages